@@ -7,7 +7,6 @@ import com.standard.coffeeshop.utils.functions.EntityToDtoAdapter;
 import org.springframework.beans.BeanUtils;
 
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class OrderRequestEntityToOrderRequestDtoAdapter implements Function<OrderRequestEntity, OrderRequestDto> {
 
@@ -20,7 +19,7 @@ public class OrderRequestEntityToOrderRequestDtoAdapter implements Function<Orde
         dto.setOrderItems(orderRequestEntity
                 .getOrderItems().stream()
                 .map(EntityToDtoAdapter.orderRequestItemEntityToOrderRequestItemDtoAdapter)
-                .collect(Collectors.toList()));
+                .toList());
         return dto;
     }
 
